...
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/medicam_primary"
        app:boxStrokeColor="@color/medicam_primary"
        app:hintTextColor="@color/medicam_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/medicam_text_gray" />
    </com.google.android.material.textfield.TextInputLayout>
...
